--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -63,7 +63,10 @@ img {
 	max-width: 100%;
 	height: auto;
 }
-
+.imgX {
+	width: 100%;
+	height: auto;
+}
 button {
 	outline: 0 !important;
 }
@@ -147,7 +150,7 @@ a:hover {
 p {
 	font-size: 15px;
 	line-height: 1.8;
-	color: #747576;
+	color: #000000;
 	margin-bottom: 15px;
 	font-weight: 400;
 	font-family: 'Source Sans Pro', sans-serif;
@@ -1753,27 +1756,6 @@ p:last-child {
 	color: #53c334;
 }
 
-.video-btn.popup-youtube {
-	height: 70px;
-	width: 70px;
-	line-height: 75px;
-	border: 3px solid #ffffff;
-	border-radius: 50%;
-	display: block;
-	position: absolute;
-	left: 50%;
-	top: 50%;
-	z-index: 1;
-	-webkit-transform: translateY(-50%) translateX(-50%);
-	transform: translateY(-50%) translateX(-50%);
-	text-align: center;
-}
-
-.video-btn.popup-youtube i {
-	color: #ffffff;
-	font-size: 30px;
-	padding-left: 5px;
-}
 .about-inner-area {
     margin-top: 35px;
 }
@@ -2331,7 +2313,6 @@ p:last-child {
 .page-title-area {
 	position: relative;
 	z-index: 1;
-	/*background-image: url(../img/page-title-bg.jpg);*/
 	background-position: center center;
 	background-size: cover;
 	background-repeat: no-repeat;
@@ -4617,4 +4598,8 @@ em {
 }
 #loading {
 	margin: auto;
+}
+.blogimg {
+	width: 300px;
+	height: 200px;
 }
